fix: overflow

--- a/src/components/ProjectCard.css
+++ b/src/components/ProjectCard.css
@@ -5,6 +5,10 @@
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   color: #fff;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between
 }
 
 .project-card:hover {
